# FinancialFreud

client/: package-lock.json  package.json
client/src/: App.tsx  index.css
server/: .env  Cargo.toml  diesel.toml
server/migrations/2024-11-15-062534_create_mood_logs/: up.sql
server/migrations/2024-11-15-062534_create_transactions/: up.sql
server/migrations/2024-11-15-062534_create_users/: up.sql
server/src/: main.rs  models.rs  schema.rs
