[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0", default-features = false }
diesel = { version = "2.2.4", features = ["postgres", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
actix-cors = "0.6"